--- a/prueba/index.html
+++ b/prueba/index.html
@@ -550,7 +550,10 @@
                                 </div>
                                 <div class="card-body">
                                     <h4 class="small font-weight-bold">Server Migration <span
-                                            class="float-right">20%</span></h4>
+                                            class="float-right">Estado: &nbsp;<div class="float-right spinner-grow spinner-grow-sm '.$row["estado"].'" role="status">
+                                                <span class="sr-only">Loading...</span>
+                                              </div></h4></span>
+                                            
                                             
                                     <div class="progress mb-4">
                                         <div class="progress-bar bg-danger" role="progressbar" style="width: 20%"
